--- a/profileStyle.css
+++ b/profileStyle.css
@@ -85,7 +85,7 @@ body {
 .charBadges {
   order: 4;
   background-color: #241734;
-  display: inline-flex;
+  display: flex;
   flex-direction: row;
   border-width: 5px;
   border-style: solid;
@@ -234,6 +234,7 @@ body {
 
 .charStats {
   order: 1;
+  width: 20%;
   background-color: #0D0221;
   display: inline-table;
   border: 2px solid;
@@ -245,6 +246,7 @@ body {
 
 .charExpBadges {
   order: 2;
+  width: 80%;
   padding: 20px;
   color: #FFC611;
 }
