--- a/style_v2.css
+++ b/style_v2.css
@@ -20,14 +20,15 @@ body {
 }
 
 .page {
-  overflow: auto;
+  height: 100%;
+  width: 1400px;
 }
 
 .topbar {
   order: 1;
-  width: 100%;
   height: 35px;
-  display: inline-flex;
+  align-items: flex-start;
+  flex-wrap: nowrap;
   flex-direction: row;
   cursor: default;
 }
@@ -36,8 +37,8 @@ body {
   cursor: pointer;
   height: 20;
   display: inline-flex;
-  flex: 0 0 auto;
-  text-align: center;
+  align-self: flex-start;
+  flex: auto;
   border-style: solid;
   border-width: 1px;
   border-radius: 3px;
@@ -53,7 +54,7 @@ body {
   cursor: pointer;
   height: 20;
   display: inline-block;
-  text-align: center;
+  align-self: flex-start;
   border-style: solid;
   border-width: 1px;
   border-radius: 3px;
@@ -75,7 +76,9 @@ body {
 
 .content {
   order: 1;
-  flex: 1 1 content;
+  flex: 1 1;
+  align-self: flex-start;
+  width: 1008px;
   display: inline-flex;
   position: relative;
   cursor: crosshair;
@@ -84,6 +87,7 @@ body {
 .sidebar {
   order: 2;
   flex: 1 0 500px;
+  max-width: 400px;
   display: inline-flex;
   flex-direction: column;
   position: relative;
