--- a/style_v2.css
+++ b/style_v2.css
@@ -377,6 +377,12 @@ a:hover {
 @media only screen
 and (min-device-width : 375px)
 and (max-device-width : 812px) {
+  .content {
+    order: 1;
+    align-self: flex-start;
+    position: relative;
+    cursor: pointer;
+  }
 }
 
 @-ms-viewport {
