--- a/style_v2.css
+++ b/style_v2.css
@@ -77,6 +77,7 @@ body {
 .content {
   order: 1;
   align-self: flex-start;
+  display: inline-flex;
   position: relative;
   cursor: crosshair;
 }
@@ -377,12 +378,6 @@ a:hover {
 @media only screen
 and (min-device-width : 375px)
 and (max-device-width : 812px) {
-  .content {
-    order: 1;
-    align-self: flex-start;
-    position: relative;
-    cursor: pointer;
-  }
 }
 
 @-ms-viewport {
