--- a/style_v2.css
+++ b/style_v2.css
@@ -153,20 +153,22 @@ a:hover {
   cursor: crosshair;
   display: none;
   position: absolute;
+  left: 0px;
   z-index:8;
 }
 
 .guilds {
   cursor: crosshair;
   display: none;
-  position: absolute;
+  //position: absolute;
+  //left: 0px;
   z-index:8;
 }
 
 .districts {
   display: none;
   position: absolute;
-  left: 0px;
+  left: -1px;
   z-index:4;
 }
 
