Better iPad fix

--- a/style_v2.css
+++ b/style_v2.css
@@ -152,17 +152,23 @@ a:hover {
 .badges {
   cursor: crosshair;
   display: none;
+  position: absolute;
+  left: 0px;
   z-index:8;
 }
 
 .guilds {
   cursor: crosshair;
   display: none;
+  position: absolute;
+  left: 0px;
   z-index:8;
 }
 
 .districts {
   display: none;
+  position: absolute;
+  left: 0px;
   z-index:4;
 }
 
