--- a/style_v2.css
+++ b/style_v2.css
@@ -85,7 +85,7 @@ body {
 
 .sidebar {
   order: 2;
-  max-width: 600px;
+  max-width: 400px;
   align-self: flex-start;
   display: inline-flex;
   flex-direction: column;
@@ -96,7 +96,7 @@ body {
 #sidebarMarkerlist {
   display: inline-block;
   z-index: 7;
-  float: left;
+  align-items: flex-start;
   background-color: #000000;
   padding-top: 20px;
 }
