--- a/style_v2.css
+++ b/style_v2.css
@@ -94,7 +94,7 @@ body {
 }
 
 #sidebarMarkerlist {
-  display: inline-block;
+  display: flex;
   max-width: 400px;
   z-index: 7;
   background-color: #000000;
