Lets try flex-direction

--- a/style_v2.css
+++ b/style_v2.css
@@ -95,6 +95,7 @@ body {
 
 #sidebarMarkerlist {
   display: flex;
+  flex-direction: column;
   max-width: 400px;
   z-index: 7;
   background-color: #000000;
