--- a/style_v2.css
+++ b/style_v2.css
@@ -85,7 +85,7 @@ body {
 
 .sidebar {
   order: 2;
-  max-width: 400px;
+  max-width: 600px;
   align-self: flex-start;
   display: inline-flex;
   flex-direction: column;
@@ -94,9 +94,8 @@ body {
 }
 
 #sidebarMarkerlist {
-  display: flex;
-  flex-direction: column;
-  max-width: 400px;
+  display: inline-block;
+  max-width: 600px;
   z-index: 7;
   background-color: #000000;
   padding-top: 20px;
@@ -349,6 +348,7 @@ a:hover {
   order: 1;
   display:inline-block;
   align-self: flex-start;
+  flex-grow: 1;
 }
 
 .markerUIbuttonRed {
