--- a/style_v2.css
+++ b/style_v2.css
@@ -5,7 +5,6 @@
 
 html {
   height: 100%;
-  display: flex;
 }
 
 body {
@@ -15,31 +14,58 @@ body {
   background: #000000;
   height: 100%;
   margin: 0px;
-  display: flex;
-  flex-direction: column;
 }
 
 .page {
   height: 100%;
   width: 1600px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: -moz-box;
+  display: -webkit-flex;
   display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-flex-direction: column;
+  -ms-flex-direction: column;
+  -moz-box-orient: vertical;
   flex-direction: column;
 }
 
 .topbar {
   order: 1;
   height: 35px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: -moz-box;
+  display: -webkit-flex;
   display: flex;
   align-items: flex-start;
+  -webkit-box-orient: horizontal;
+  -webkit-flex-direction: row;
+  -ms-flex-direction: row;
+  -moz-box-orient: horizontal;
   flex-direction: row;
   cursor: default;
+  -ms-flex: 0 0 auto;
+  -webkit-flex: 0 0 auto;
   flex: 0 0 auto;
+  -webkit-box-align: start;
+  -moz-box-align: start;
+  -ms-flex-align: start;
+  -webkit-align-items: flex-start;
+  align-items: flex-start;
 }
 
 .maplink {
   cursor: pointer;
   height: 20;
+  display: -webkit-inline-box;
+  display: -moz-inline-box;
+  display: -ms-inline-flexbox;
+  display: -webkit-inline-flex;
   display: inline-flex;
+  -ms-flex-item-align: start;
+  -webkit-align-self: flex-start;
   align-self: flex-start;
   border-style: solid;
   border-width: 1px;
