--- a/style_v2.css
+++ b/style_v2.css
@@ -76,6 +76,7 @@ body {
   vertical-align: middle;
   font-family: Verdana, Arial, Helvetica, sans-serif;
   font-size: 10pt;
+  text-align: justify;
   margin: 3px;
 }
 
