--- a/style_v2.css
+++ b/style_v2.css
@@ -5,6 +5,8 @@
 
 html {
   height: 100%;
+  min-height: 100%;
+  min-width: 100%;
 }
 
 body {
@@ -76,7 +78,6 @@ body {
   vertical-align: middle;
   font-family: Verdana, Arial, Helvetica, sans-serif;
   font-size: 10pt;
-  text-align: justify;
   margin: 3px;
 }
 
