--- a/profileLookup.css
+++ b/profileLookup.css
@@ -86,7 +86,7 @@ body {
   border-width: 5px;
   display: inline-flex;
   flex-direction: row;
-  width: 75%;
+  width: 900PX;
   margin-top: 5px;
   margin-bottom: 5px;
 }
@@ -191,14 +191,13 @@ body {
 #charInfo1 {
   order: 1;
   padding: 15px;
+  width: 75%;
 }
 
 #charInfo2{
   order: 2;
-  padding-left: 200px;
-  padding-right: 15px;
-  padding-top: 15px;
-  padding-bottom: 15px;
+  padding: 15px;
+  width: 25%;
 }
 
 .left {
